# coyote-sense-platform

./: .gitignore  COMPREHENSIVE_SECURITY_TEST_ANALYSIS.md  CPP_OAUTH2_INTEGRATION_SUCCESS.md  DESIGN.md  OAUTH2_INTEGRATION_SUCCESS.md  README.md  TEST_RUNNER_DOCUMENTATION.md  TYPESCRIPT_OAUTH2_INTEGRATION_SUCCESS.md  folders_structure.md  run-ts-integration-clean.ps1  run-ts-integration-simple.ps1  run-typescript-integration-tests-fixed.ps1  run-typescript-integration-tests.sh  run_integration_tests.ps1  run_tests.ps1
Platform/Common/cpp/BaseUnit/BaseUnit/: BaseUnit.cpp  BaseUnit.h  CMakeLists.txt  DependencyInjection.cpp  DependencyInjection.h  ExampleTradingUnit.cpp  TestDependencyInjection.cpp  TestFramework.h  UnitTests.cpp  config.json
Platform/Common/cpp/Infra/: CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  HttpClient.h  IConfigReader.h  IHttpClient.h  IRedisClient.h  ISecureStore.h  Logger.cpp  Logger.h  MockConfigReader.h  MockHttpClient.h  MockRedisClient.h  RedisClient.cpp  RedisClient.h  SecureStore.cpp  SecureStore.h  SecureStore_new.cpp
Platform/infra/broker/src/cpp/: CMakeLists.txt
Platform/infra/broker/src/cpp/interfaces/: redis_client.h
Platform/infra/http/: CMakeLists.txt  README.md  build-with-vcpkg.ps1  run-tests.ps1  vcpkg.json
Platform/infra/http/examples/cpp/: http_client_example.cpp
Platform/infra/http/examples/dotnet/: AdvancedHttpClientExamples.cs  HttpClientExample.cs
Platform/infra/http/examples/python/: http_client_example.py
Platform/infra/http/factory/: __init__.py
Platform/infra/http/factory/cpp/: http_client_factory.cpp  http_client_factory.h
Platform/infra/http/factory/dotnet/: HttpClientFactory.cs
Platform/infra/http/factory/python/: http_client_factory_fixed.py
Platform/infra/http/factory/ts/: http-client-factory.ts
Platform/infra/http/interfaces/: __init__.py
Platform/infra/http/interfaces/cpp/: http_client.h
Platform/infra/http/interfaces/dotnet/: Coyote.Infra.Http.csproj
Platform/infra/http/interfaces/ts/: base-http-client.ts
Platform/infra/http/modes/: __init__.py
Platform/infra/http/modes/debug/cpp/: http_client_debug.h
Platform/infra/http/modes/debug/dotnet/: HttpClientDebug.cs
Platform/infra/http/modes/mock/: __init__.py
Platform/infra/http/modes/mock/cpp/: http_client_mock.cpp  http_client_mock.h
Platform/infra/http/modes/mock/dotnet/: HttpClientMock.cs
Platform/infra/http/modes/mock/python/: http_client_mock.py
Platform/infra/http/modes/mock/ts/: mock-http-client.ts
Platform/infra/http/modes/real/: __init__.py
Platform/infra/http/modes/real/cpp/: http_client_real.cpp  http_client_real.h
Platform/infra/http/modes/real/dotnet/: HttpClientReal.cs
Platform/infra/http/modes/record/cpp/: http_client_record.h
Platform/infra/http/modes/record/dotnet/: HttpClientRecord.cs
Platform/infra/http/modes/replay/dotnet/: HttpClientReplay.cs
Platform/infra/http/modes/replay/ts/: replay-http-client.ts
Platform/infra/http/modes/simulation/dotnet/: HttpClientSimulation.cs
Platform/infra/http/modes/simulation/ts/: simulation-http-client.ts
Platform/infra/http/src/cpp/: CMakeLists.txt
Platform/infra/http/src/cpp/factory/: http_client_factory.cpp  http_client_factory.h
Platform/infra/http/src/dotnet/config/: HttpClientOptions.cs
Platform/infra/http/src/dotnet/factory/: HttpClientFactory.cs
Platform/infra/http/src/dotnet/interfaces/: BaseHttpClient.cs  Configuration.cs  HttpClient.cs
Platform/infra/http/src/python/: pyproject.toml
Platform/infra/http/src/python/factory/: http_client_factory.py
Platform/infra/http/src/python/interfaces/: http_client.py
Platform/infra/http/src/ts/: package.json
Platform/infra/http/src/ts/factory/: http-client-factory.ts
Platform/infra/http/src/ts/interfaces/: configuration.ts  http-client.ts
Platform/infra/http/tests/: README.md  __init__.py  run-all-tests.ps1
Platform/infra/http/tests/cpp/: CMakeLists.txt  simple_test_framework.h  test_http_client_factory.cpp  test_http_client_mock.cpp  test_main.cpp
Platform/infra/http/tests/dotnet/: BasicHttpClientTests.cs  Coyote.Infra.Http.Tests.csproj  HttpClientFactoryTests.cs  MockHttpClientTests.cs  RealHttpClientIntegrationTests.cs  ReplayHttpClientTests.cs  SimulationHttpClientTests.cs
Platform/infra/http/tests/integration/: CMakeLists.txt  cpp-tests.Dockerfile  docker-compose.yml  package-lock.json  package.json  run-integration-tests.ps1  run-integration-tests.sh  test-server.Dockerfile
Platform/infra/http/tests/integration/cpp/: test_http_client_integration.cpp
Platform/infra/http/tests/integration/test-server/: server.js
Platform/infra/http/tests/python/: test_http_client_factory.py  test_http_client_mock.py
Platform/infra/http/tests/ts/: IMPLEMENTATION-COMPLETE.md  README.md  demo.js  demo.mjs  index.ts  test-import.ts  test-interfaces.ts  test-minimal.ts  tsconfig.json
Platform/infra/http/tests/ts/examples/: basic-usage.ts  working-demo.ts
Platform/infra/http/tests/unit/: CMakeLists.txt  test_http_client_factory.cpp  test_http_client_mock.cpp
Platform/infra/http/ts/: IMPLEMENTATION-COMPLETE.md  README.md  demo-package.json  index.ts  minimal-test.mjs  package-lock.json  package.json  test-import.ts  test-minimal.ts  test-simulation.ts
Platform/infra/http/ts/examples/: advanced-features.ts  basic-usage.ts  testing-patterns.ts  working-demo.ts
Platform/infra/http/ts/tests/: basic-integration.test.ts  debug-http-client-fixed.test.ts  debug-http-client-modernized.test.ts  debug-http-client.test.ts  http-client-factory.test.ts  mock-http-client.test.ts  real-http-client-simple.test.ts  record-http-client.test.ts  replay-http-client.test.ts  setup.ts  simulation-http-client.test.ts  working-example.test.ts
Platform/infra/log/src/cpp/: CMakeLists.txt
Platform/infra/log/src/python/: pyproject.toml
Platform/infra/security/src/python/: __init__.py  pyproject.toml
Platform/infra/security/tests/cpp/: CMakeLists.txt  auth_authentication_test_new.cpp  comprehensive_security_test.cpp  simple_security_test.cpp  test_cpp_full.ps1  test_cpp_function.ps1  test_functions.ps1
(+449 files in other folders)
