[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coyote-infra-security"
version = "1.0.0"
description = "CoyoteSense Security Infrastructure Component - Authentication and Security Services"
readme = "../../README.md"
authors = [
    {name = "CoyoteSense Platform Team", email = "dev@coyotesense.io"}
]
license = {file = "../../../../../LICENSE"}
requires-python = ">=3.8"
keywords = ["authentication", "oauth2", "jwt", "security", "trading", "coyotesense"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "aiohttp>=3.8.0",
    "PyJWT[crypto]>=2.6.0",
    "cryptography>=3.4.8",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0", 
    "pytest-asyncio>=0.21.0", 
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0"
]
dev = [
    "black>=22.0.0", 
    "isort>=5.10.0", 
    "mypy>=1.0.0",
    "flake8>=5.0.0"
]
all = [
    "coyote-infra-security[test,dev]"
]

[project.urls]
Homepage = "https://github.com/coyotesense/coyote-sense-platform"
Documentation = "https://docs.coyotesense.io"
Repository = "https://github.com/coyotesense/coyote-sense-platform"
"Bug Tracker" = "https://github.com/coyotesense/coyote-sense-platform/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "__pycache__*", "*.pyc"]

[tool.pytest.ini_options]
testpaths = ["../../tests/python"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
